# MemeTalk

./: .gitignore  CLAUDE.md  README.md  debug.txt  env.txt  launch.bat  launch.bat.lnk  pyproject.toml  streamlit_app.py  temp.txt
.claude/: settings.local.json
openspec/: config.yaml
openspec/specs/meme-search-mvp/: spec.md
pages/: 1_⚙️_Settings.py  2_📦_Index.py  3_🔍_Search.py
src/memetalk/: __init__.py  config.py
src/memetalk/api/: main.py
src/memetalk/app/: container.py  evaluation.py  indexer.py  query_image.py  search.py  settings_io.py  ui.py  ui_config.py  ui_state.py
src/memetalk/cli/: main.py
src/memetalk/core/: __init__.py  models.py  providers.py  retrieval.py
src/memetalk/providers/: anthropic_provider.py  json_utils.py  mock.py  openai_provider.py  paddleocr_provider.py  registry.py
src/memetalk/storage/: sqlite_store.py  vector_store.py
src/memetalk/telegram/: __init__.py  bot.py  router.py  runtime.py
tests/: test_chroma_vector_store.py  test_cli.py  test_evaluation.py  test_indexer.py  test_models.py  test_openai_provider.py  test_paddleocr_provider.py  test_provider_registry.py  test_search_api.py  test_search_page.py  test_search_service.py  test_settings_io.py  test_sqlite_store.py  test_telegram_runtime.py  test_ui_config.py  test_ui_state.py  test_ui_theme.py
